--- a/style.css
+++ b/style.css
@@ -239,3 +239,13 @@ button:hover {
 .hidden {
   display: none !important;
 }
+
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: radial-gradient(circle at center, #0a0013 20%, #000 100%);
+}
