--- a/style.css
+++ b/style.css
@@ -249,3 +249,21 @@ button:hover {
   z-index: -1;
   background: radial-gradient(circle at center, #0a0013 20%, #000 100%);
 }
+
+#footer {
+  position: fixed;
+  bottom: 15px;
+  font-size: 14px;
+  text-align: center;
+  color: #aaa;
+  z-index: 2;
+}
+
+#footer a {
+  color: #ff66a3;
+  text-decoration: none;
+}
+
+#footer a:hover {
+  text-decoration: underline;
+}
